--- a/custom/custom.qrc
+++ b/custom/custom.qrc
@@ -33,6 +33,7 @@
         <file alias="Custom/Widgets/CustomSignalStrength.qml">res/Widgets/CustomSignalStrength.qml</file>
         <file alias="Custom/Widgets/CustomToolBarButton.qml">res/Widgets/CustomToolBarButton.qml</file>
         <file alias="Custom/Widgets/CustomToolStrip.qml">res/Widgets/CustomToolStrip.qml</file>
+        <file alias="Custom/Widgets/CustomToolStripFlightModeSelect.qml">res/Widgets/CustomToolStripFlightModeSelect.qml</file>
         <file alias="Custom/Widgets/CustomToolStripHoverButton.qml">res/Widgets/CustomToolStripHoverButton.qml</file>
         <file alias="Custom/Widgets/CustomVehicleButton.qml">res/Widgets/CustomVehicleButton.qml</file>
         <file alias="Custom/Widgets/qmldir">res/Widgets/qmldir</file>
