--- a/custom/custom.qrc
+++ b/custom/custom.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="custom/img">
+    <qresource prefix="/custom/img">
         <file alias="altitude.svg">res/Images/altitude.svg</file>
         <file alias="attitude_crosshair.svg">res/Images/attitude_crosshair.svg</file>
         <file alias="attitude_crosshair_v2.svg">res/Images/attitude_crosshair_v2.svg</file>
@@ -16,9 +16,9 @@
         <file alias="CustomAppIcon.png">res/Images/CustomAppIcon.png</file>
     </qresource>
     <qresource prefix="/qmlimages">
-	<file alias="PaperPlane.svg">res/Images/CustomVehicleIcon.svg</file>
+        <file alias="PaperPlane.svg">res/Images/CustomVehicleIcon.svg</file>
     </qresource>
-    <qresource prefix="Custom/Widgets">
+    <qresource prefix="/Custom/Widgets">
         <file alias="Custom/Widgets/CustomArtificialHorizon.qml">res/Widgets/CustomArtificialHorizon.qml</file>
         <file alias="Custom/Widgets/CustomAttitudeWidget.qml">res/Widgets/CustomAttitudeWidget.qml</file>
         <file alias="Custom/Widgets/CustomDropPanel.qml">res/Widgets/CustomDropPanel.qml</file>
@@ -40,7 +40,7 @@
         <file alias="Custom/Widgets/qmldir">res/Widgets/qmldir</file>
     </qresource>
     <qresource prefix="/qml">
-	    <file alias="MainRootWindow.qml">res/ui/CustomMainRootWindow.qml</file>
+        <file alias="MainRootWindow.qml">res/ui/CustomMainRootWindow.qml</file>
         <file alias="QGroundControl/FlightDisplay/FlyViewCustomLayer.qml">res/DisplayViews/CustomFlyViewOverlay.qml</file>
         <file alias="QGroundControl/FlightDisplay/FlyView.qml">res/DisplayViews/CustomFlyView.qml</file>
         <file alias="PlanView.qml">res/DisplayViews/CustomPlanView.qml</file>
