--- a/custom/custom.qrc
+++ b/custom/custom.qrc
@@ -35,6 +35,8 @@
         <file alias="Custom/Widgets/CustomSignalStrength.qml">res/Widgets/CustomSignalStrength.qml</file>
         <file alias="Custom/Widgets/CustomToolBarButton.qml">res/Widgets/CustomToolBarButton.qml</file>
         <file alias="Custom/Widgets/CustomToolStrip.qml">res/Widgets/CustomToolStrip.qml</file>
+        <file alias="Custom/Widgets/CustomToolStripAction.cc">res/Widgets/CustomToolStripAction.cc</file>
+        <file alias="Custom/Widgets/CustomToolStripAction.h">res/Widgets/CustomToolStripAction.h</file>
         <file alias="Custom/Widgets/CustomToolStripHoverButton.qml">res/Widgets/CustomToolStripHoverButton.qml</file>
         <file alias="Custom/Widgets/CustomVehicleButton.qml">res/Widgets/CustomVehicleButton.qml</file>
         <file alias="Custom/Widgets/qmldir">res/Widgets/qmldir</file>
