--- a/custom/custom.qrc
+++ b/custom/custom.qrc
@@ -28,7 +28,9 @@
         <file alias="Custom/Widgets/CustomMavMessageWidget.qml">res/Widgets/CustomMavMessageWidget.qml</file>
         <file alias="Custom/Widgets/CustomMavStatusButton.qml">res/Widgets/CustomMavStatusButton.qml</file>
         <file alias="Custom/Widgets/CustomMavStatusGPSButton.qml">res/Widgets/CustomMavStatusGPSButton.qml</file>
+        <file alias="Custom/Widgets/CustomMavStatusGPSDropPanel.qml">res/Widgets/CustomMavStatusGPSDropPanel.qml</file>
         <file alias="Custom/Widgets/CustomMavStatusIndicator.qml">res/Widgets/CustomMavStatusIndicator.qml</file>
+        <file alias="Custom/Widgets/CustomMavStatusSensorsDropPanel.qml">res/Widgets/CustomMavStatusSensorsDropPanel.qml</file>
         <file alias="Custom/Widgets/CustomOnOffSwitch.qml">res/Widgets/CustomOnOffSwitch.qml</file>
         <file alias="Custom/Widgets/CustomQGCPitchIndicator.qml">res/Widgets/CustomQGCPitchIndicator.qml</file>
         <file alias="Custom/Widgets/CustomQuickButton.qml">res/Widgets/CustomQuickButton.qml</file>
