--- a/custom/custom.qrc
+++ b/custom/custom.qrc
@@ -22,6 +22,7 @@
         <file alias="Custom/Widgets/CustomArtificialHorizon.qml">res/Widgets/CustomArtificialHorizon.qml</file>
         <file alias="Custom/Widgets/CustomAttitudeWidget.qml">res/Widgets/CustomAttitudeWidget.qml</file>
         <file alias="Custom/Widgets/CustomDropPanel.qml">res/Widgets/CustomDropPanel.qml</file>
+        <file alias="Custom/Widgets/CustomFlightDisplayViewVideo.qml">res/Widgets/CustomFlightDisplayViewVideo.qml</file>
         <file alias="Custom/Widgets/CustomFlightModeButton.qml">res/Widgets/CustomFlightModeButton.qml</file>
         <file alias="Custom/Widgets/CustomFlightModeSelectDropPanel.qml">res/Widgets/CustomFlightModeSelectDropPanel.qml</file>
         <file alias="Custom/Widgets/CustomFlyViewVideoPFD.qml">res/Widgets/CustomFlyViewVideoPFD.qml</file>
