--- a/custom/custom.qrc
+++ b/custom/custom.qrc
@@ -12,6 +12,7 @@
         <file alias="horizontal_speed.svg">res/Images/horizontal_speed.svg</file>
         <file alias="microSD.svg">res/Images/microSD.svg</file>
         <file alias="odometer.svg">res/Images/odometer.svg</file>
+        <file alias="pipResize_BottomRight.svg">res/Images/pipResize_BottomRight.svg</file>
         <file alias="vertical_speed.svg">res/Images/vertical_speed.svg</file>
         <file alias="CustomAppIcon.png">res/Images/CustomAppIcon.png</file>
     </qresource>
