--- a/custom/custom.qrc
+++ b/custom/custom.qrc
@@ -4,6 +4,7 @@
         <file alias="attitude_crosshair.svg">res/Images/attitude_crosshair.svg</file>
         <file alias="attitude_crosshair_v2.svg">res/Images/attitude_crosshair_v2.svg</file>
         <file alias="attitude_crosshair_v3.svg">res/Images/attitude_crosshair_v3.svg</file>
+        <file alias="attitude_crosshair_v4.svg">res/Images/attitude_crosshair_v4.svg</file>
         <file alias="attitude_dial.svg">res/Images/attitude_dial.svg</file>
         <file alias="attitude_pointer.svg">res/Images/attitude_pointer.svg</file>
         <file alias="battery-25.svg">res/Images/battery-25.svg</file>
